--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -7,6 +7,11 @@ header{
     height: 250px;
 }
 
+#link{
+    text-decoration: none;
+    font-size: 21px;
+}
+
 h1{
     font-size: 75px;
     margin-top: 0px;
@@ -27,6 +32,7 @@ h1{
     background-attachment: fixed;
     padding-left: 30px;
     padding-top: 30px;
+    box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.274);
 }
 
 .imagen p{
