--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -26,7 +26,11 @@ h1{
     margin-top: 10px;
 }
 
-.imagen{
+.normal p{
+    margin-left: 23px;
+}
+
+.imagem {
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
@@ -35,7 +39,7 @@ h1{
     box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.274);
 }
 
-.imagen p{
+.imagem p{
     background-color: rgba(0, 0, 0, 0.403);
     border-radius: 10px;
     height: 500px;
@@ -43,6 +47,7 @@ h1{
     color: white;
     padding: 10px;
     font-size: 250%;
+    box-shadow: -1px 1px 9px rgba(0, 0, 0, 0.274);
 }
 
 #img01{
