--- a/desafios/desafio014/style.css
+++ b/desafios/desafio014/style.css
@@ -38,7 +38,7 @@ iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
@@ -59,5 +59,5 @@ section#redes-sociais img:hover{
     border: 2px solid rgb(245, 245, 245);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.626);
-    transition: .3s, border .5s;
+    transition: .3s, border 0.s;
 }
